css/style.css
body,
*,
*:before,
*:after {
	box-sizing: border-box;
}

html {
	font-size: 32px;
}

body {
	background-color: #fbf7f5;
}

main {
	position: relative;
	top: 0;
}

p.app,
.button a,
.button2 a {
	font-family: sans-serif;
}

h1 {
	display: none;
}

h2.app-name {
	font-weight: bold;
	color: #401F51;
	font-size: 2rem;
	font-family: sans-serif;
}

h3 {
	font-family: sans-serif;
	font-weight: bold;
}


p.striking {
	display: inline-block;
	color: #1C1C1C;
	font-size: 1rem;
	font-weight: bold;
	margin-top: .05rem;
	margin-bottom: 0rem;
	margin-left: .15rem;
	align: center;
	width: 100%;
	border-style: none;
	padding-top: .8rem;
	padding-bottom: .5rem;
}	

p {
	border: 1px solid #000000;
	padding: 1rem;
	margin: 10px;
	width: 30%;
	font-size: 0.75rem;
	text-align: center;
}

p.app {
	display: inline-block;
	border-width: 0;
	width: 80%;
	padding-top: .01rem;
	text-align: center;
	margin-bottom: .2rem;
	color: 1C1C1C;
	font-size: .7rem;
	font-weight: 500;
	line-height: 1.2rem;

}

a {
	color: #F9F6EE;
	font-weight: bold;
	text-decoration: none;
	font-size: 0.5rem;
}

a:hover {
	color: #CCA3DC;
}

a:active {
	color: #b7c18f;
}

.main-content {
	position: static;
	top: 0rem;
}

/*---------------------------------

Buttons

----------------------------------*/


.buttonGroup {
	display: flex;
	align-items: center;
	justify-content: center;
}




.button,
.button2,
.button3 {
	display: flex;
	flex: 2 1 auto;
	background-color: #0E151D;
	color: #DFCEE4;
	margin: .30rem;
	padding: .8rem .4rem .8rem .4rem;
	opacity: 1;
	font-size: .5rem;
	width: 25%;
	height: auto;
	float: center;
	justify-content: center;
	box-shadow: 4px 5px 2px gray;
}


.button:hover,
.button2:hover {
	background-color: #454545;
	color: #DFCEE4;
	font-weight: bold;
	text-decoration: none;
	transform: translateY(-2px);
}

.button:hover a,
.button2:hover a {
	color:#DFCEE4;
}

p.app::after {
	content: "\a";
	white-space: pre;
}


.center {
	text-align: center;
}

@media only screen and (max-width: 1160px) {

	.button,
	.button2 {
		flex: 2 1 auto;
		float: none;
		padding: 1rem .75rem 1rem .75rem;
		max-width: 100%;
		height: auto;
		align-content: center;
		text-align: center;
	}
}

@media only screen and (max-width: 920px) {

	.button,
	.button2 {
		padding: .6rem .3rem .6rem .3rem;
	}
}

@media only screen and (max-width: 897px) {
	.main-content {
		top: 0rem;
	}

	.buttonGroup {
		display: flex;
		align-items: center;
		justify-content: center;
	}

	.button,
	.button2 {
		flex: auto;
		space-between: .05rem;
		border-radius: 3px;
		font-size: .5rem;
		text-align: center;
		max-width: 100%;
		height: auto;
		padding: .5rem .3rem .5rem .3carem;
	}
}

@media only screen and (max-width: 870px) {

	.button,
	.button2 {
		padding: 2%;
		margin: .2rem;
	}
}

@media only screen and (max-width: 813px) {

	.button,
	.button2 {
		padding: 1.5%;
		margin: .1rem;
	}
}


@media only screen and (max-width: 785px) {

	.button,
	.button2 {
		padding: 4%;
		margin: 1rem;
	}
}

	h2 {
		font-size: 1rem;
	}

	.striking {
		font-size: .75rem;
		margin-bottom: .3rem;
		margin-top: .3rem;
		margin-left: .15rem;
	}

	span {
		font-size: .6rem;
	}

	.main-content {
		top: 2.3rem;
	}

	.buttonGroup {
		display: flex;
		align-items: center;
		justify-content: stretch;
	}


	.button,
	.button2 {
		display: flex;
		flex: auto;
		border-radius: 3px;
		margin-top: .4rem;
		padding-top: .75rem;
		padding-bottom: .75rem;
		padding-right: 6%;
		padding-left: 6%;
		font-size: .5rem;
		text-align: center;
		width: 100%;
		height: auto;
	}
}


@media only screen and (max-width: 505px) {

	.button,
	.button2 {
		padding: 4%;
	}
}

@media only screen and (max-width: 435px) {

	.button,
	.button2 {
		padding: 1%;
		margin: .15rem;
	}
}

/*=================================
Header
=================================*/

header {
	position: fixed;
	z-index: 100;
	width: 100%;
	background-color: #454545;
}


.logo {
	float: left;
	display: block;
	margin-left: 1rem;
	margin-right: auto;
	padding-top: .5rem;
	padding-bottom: .5rem;
	width: 12.5%;
	max-height: 5%;
}

.navigation-bar {
	width: 100%;
	margin: auto;
}

.head-nav {
	float: right;
	text-transform: uppercase;
	padding-top: 2.3%;
	padding-bottom: 2%;
}

.head-nav li {
	margin-right: 3rem;
	display: inline-block;
	color: #DFCEE4;
}

@media only screen and (min-width: 680px) {
	.mobile ul {
		display: none;
	}
}

@media only screen and (max-width: 680px) {
	.head-nav ul {
		display: none;
	}

	header .content {
		padding: .5rem 0;
	}

	.mobile ul {
		display: left;
		align-items: left;
		width: 100%;
	}

	.logo {
		display: none;
	}
}

/*===================================
CTA
===================================*/

#sign-up-section {
	display: flex;
	justify-content: center;
	align-items: center;
	background: white;
	padding-bottom: .71rem;
}

#sign-up-cta {
	display: block;
	position: relative;
	background-color: hsla(44, 48%, 95%, 85%);
	top: 4rem;
/*
	padding: .75rem .4rem .75rem .4rem;
*/
	max-width: 50%;
	max-height: auto;
	margin-bottom: 4rem;
	margin-left: 3rem;
	border-radius: 1rem;
	border: 5px solid #454545;
}

.content {
	padding: 1rem .5rem;
}

@media only screen and (max-width: 1060px) {
	#sign-up-cta {
		justify-content: center;
		max-width: 65%;
		height: auto;
		margin-left: 1rem;
		top: 3.5rem;
	}
}

@media only screen and (max-width: 680px) {

	#sign-up-section {
		justify-content: center;
		align-items: start;
		background-image: none;
		background-position: top;
		width: auto;
		height: auto;
		position: relative;
		padding-bottom: 0;
	}

	#sign-up-cta {
		margin-top: 0rem;
		top: 3rem;
		padding: 1rem 0 .5rem 0;
		max-width: 100%;
		margin-bottom: 0;
		margin-left: 0;
		border-radius: 0;
	}

	.hero {
		justify-content: center;
		align-items: start;
	}
}

@media only screen and (max-width: 420px) {

	#sign-up-section {
		justify-content: center;
		align-items: start;
		background-image: none;
		background-position: top;
		width: auto;
		height: auto;
		position: relative;
		padding-bottom: 0;
	}

	#sign-up-cta {
		margin-top: 0rem;
		top: 3rem;
		padding: 1rem 0 .5rem 0;
		max-width: 100%;
		margin-bottom: 0;
		margin-left: 0;
		border-radius: 0;
	}

	.hero {
		justify-content: center;
		align-items: start;
	}
}

/*===================================
Hotspot
===================================*/


#hotspot {
	left: 15%;
	top: 0%;
}

.hotspot {
	width: 10rem;
	height: 90px;
	line-height: 18px;
	text-align: center;
	position: absolute;
	border-radius: 5px;
	font: sans-serif;
}



.hotspot .empty-text {
	width: 100%;
	height: 100%;
}

.empty-text {
	font-family: sans-serif;
	font-size: 1rem;
	margin-top: 1rem;
}

.hotspot .empty-text:hover {
	cursor: pointer;
}

.hover-popup {
	display: none;
	z-index: 1;
}

.hotspot.clicked {
	display: block;
}

.hotspot:hover .hover-popup,
.hotspot2:hover .hover-popup2 {
	display: block;
	position: absolute;
	margin-left: 1rem;
	left: 100%;
	top: 0;
	width: 10rem;
	height: 11rem;
	line-height: 1rem;
	text-align: center;
	background-color: white;
	position: absolute;
	border-radius: 5px;
	border: 2px solid rgb(38, 38, 38);
	font-family: san-serif;
	font-size: .75rem;
}

/*====================================
Features
====================================*/



#features,
#features2 {
	display: flex;
	column-gap: 0.75rem;
	height: 16rem;
	width: 80%;
	background-color: #fbf7f5;
	flex-direction: row;
}


#features {
	margin: 1.8rem auto 0 auto;
}

#features2 {
	margin: .75rem auto .9rem auto;
}

.image-container {
	max-height: 13rem;
	margin: 0 auto .5rem auto;
	position: center;
	object-fit: fill;
	width: 100%;
	overflow: hidden;
	box-shadow: 4px 5px 2px gray;
	border-radius: 8px;
}

.feature img {
	display: flex;
	margin: 0 auto;
	object-fit: fill;
}

.row1,
.row2,
.row3,
.row4 {
	width: 100%;
}


/*
.row1 p,
.row2 p,
.row3 p,
.row4 p {
	display: none;
}
*/

@media only screen and (max-width: 420px) {
	#features
	#features2 {
		padding-top: 3rem;
}
}

/*
.feature p {
	padding: 1.5rem 1.1rem;
	width: 100%;
	font-family: sans-serif;
	min-height: 40%;
	line-height: .9rem;

}
*/

.feature img,
.feature p {
	margin: auto;
	width: 100%;
}


/*===================================
Newsletter
===================================*/

#newsletter {
	background:white;
}

h2.newsletter-title {
	font-weight: bold;
	color: #401F51;
	font-size: 1.5rem;
	font-family: sans-serif;
	text-align: center;
}

.signupForm {
	display: flex;
	justify-content: right;
	align-items: center;
	height: 100vh;
}

.news-form {
	background-color: #E4E0D8;
	width: 400px;
	border-radius: 8px;
	padding: .5rem 1rem;
	box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
	margin: 1rem 2rem 1rem 1rem;
	box-shadow: 5px 5px 5px black;
}

.newsletter-title {
	font-size: .5rem;
}

.label {
	position: absolute;
	top: .5rem;
	left: .5rem;
	padding: 0 4px;
	background-color: #E4E0D8;
	color: #0E151D;
	font-size: .5rem;
	font-family: sans-serif;
}

.inputContainer {
	position: relative;
	height: 1.15rem;
	width: 90%;
	margin-bottom: 20px;
}

.input {
	position: absolute;
	top: 0px;
	left: 0px;
	height: 100%;
	width: 100%;
	border: 1px solid black;
	border-radius: 7px;
	font-size: .8rem;
	padding: 0 20px;
	outline: none;
	background: none;
	z-index: 1;

}

::placeholder {
	color: transparent;
}

p.striking2 {
	display: inline-block;
	color: #1C1C1C;
	font-size: 1rem;
	font-weight: bold;
	margin-top: .05rem;
	margin-bottom: 0rem;
	margin-left: .15rem;
	align: center;
	width: 100%;
	border-style: none;
	padding-top: .8rem;
	padding-bottom: .5rem;
}	


.submitBtn {
	display: block;
	margin-left: auto;
	padding: .5rem 1rem;
	border: none;
	background-color: #0E151D;
	color: #F9F6EE;
	border-radius: .25rem;
	cursor: pointer;
	font-size: .5rem;
	margin-top: 1rem;
	box-shadow: 4px 5px 2px gray;
}

.submitBtn:hover {
	background-color: #454545;
	transform: translateY(-2px);
	color: #DFCEE4;
	font-weight: bold;
	text-decoration: none;
}


.submitBtn:hover a {
	color:#E4E0D8;
}

/*===================================
Footer
===================================*/

.page-footer {
	background-color: #454545;
	width: 100%;
	margin: auto;
}

.page-footer-content {
	display: inline-block;
}

.copyright {
	border: none;
	display: block;
	position: absolute;
	float: left;
	font-size: .5rem;
	text-align: left;
	color: #F9F6EE;
	background-color: #454545;
	padding-top: 1.5rem;
	padding-left: 1.5rem;
}

footer li {
	margin: 1em;
	display: inline-block;
	color: #F9F6EE;
	background-color: #454545;
}

footer ul:first-child {
	margin-left: 35rem;
}

